--- a/index.html
+++ b/index.html
@@ -1,13 +1,121 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JS - Katas 04</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="assets/css/reset.css">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
+
 <body>
-    <h1>JS - Katas 04</h1>
+    <header class="title">
+        <h1>JS - Katas 04</h1>
+        <span class="katas"><i class="fas fa-chevron-down"></i></span>
+    </header>
+    <ul class="box" id="list-katas">
+        <li>
+            <button id="1">kata1</button>
+        </li>
+        <li>
+            <button id="2">kata2</button>
+        </li>
+        <li>
+            <button id="3">kata3</button>
+        </li>
+        <li>
+            <button id="4">kata4</button>
+        </li>
+        <li>
+            <button id="5">kata5</button>
+        </li>
+        <li>
+            <button id="6">kata6</button>
+        </li>
+        <li>
+            <button id="7">kata7</button>
+        </li>
+        <li>
+            <button id="8">kata8</button>
+        </li>
+        <li>
+            <button id="9">kata9</button>
+        </li>
+        <li>
+            <button id="10">kata10</button>
+        </li>
+        <li>
+            <button id="11">kata11</button>
+        </li>
+        <li>
+            <button id="12">kata12</button>
+        </li>
+        <li>
+            <button id="13">kata13</button>
+        </li>
+        <li>
+            <button id="14">kata14</button>
+        </li>
+        <li>
+            <button id="15">kata15</button>
+        </li>
+        <li>
+            <button id="16">kata16</button>
+        </li>
+        <li>
+            <button id="17">kata17</button>
+        </li>
+        <li>
+            <button id="18">kata18</button>
+        </li>
+        <li>
+            <button id="19">kata19</button>
+        </li>
+        <li>
+            <button id="20">kata20</button>
+        </li>
+        <li>
+            <button id="21">kata21</button>
+        </li>
+        <li>
+            <button id="22">kata22</button>
+        </li>
+        <li>
+            <button id="23">kata23</button>
+        </li>
+        <li>
+            <button id="24">kata24</button>
+        </li>
+        <li>
+            <button id="25">kata25</button>
+        </li>
+        <li>
+            <button id="26">kata26</button>
+        </li>
+        <li>
+            <button id="27">kata27</button>
+        </li>
+        <li>
+            <button id="28">kata28</button>
+        </li>
+        <li>
+            <button id="29">kata29</button>
+        </li>
+        <li>
+            <button id="30">kata30</button>
+        </li>
+        <li>
+            <button id="31">kata31</button>
+        </li>
+        <li >
+            <button id="32">kata32</button>
+        </li>
+    </ul>
+    </header>
+    <div id="box-result" class="result"></div>
     <script src="katas4.js"></script>
 </body>
+
 </html>
